[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/Level/levels/Level1.gd" type="Script" id=1]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="StartLeft" type="Position2D" parent="."]
position = Vector2( 300, -90 )

[node name="EndLeft" type="Position2D" parent="."]
position = Vector2( 300, 1170 )

[node name="tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
